# agentic-rag

./: Dockerfile  README.md  compose.yaml  pyproject.toml
app/: agent.py  cache.py  chunking.py  config.py  main.py  tracing.py  vectorstorage.py
data/test_docs/: test.json
test/: test_agent.py
